--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="title_activity_main">MainActivity</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="postnumber">0</string>
+    <string name="postnumber">0 publicações</string>
     <string name="username">username</string>
     <string name="salvar">Salvar</string>
     <string name="tema_escuro">Tema Escuro</string>
@@ -24,4 +24,5 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="reported">Esta frase foi denunciada, até que seja analisada, não será exibida no feed!</string>
 </resources>
