--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,11 @@
     <string name="title_activity_main">MainActivity</string>
 
     <!-- TODO: Remove or change this placeholder text -->
+    <string name="facebook_app_id">259084328108067</string>
+    <string name="facebook_application_id">259084328108067</string>
+
+    <string name="fb_login_protocol_scheme">fb259084328108067</string>
+
     <string name="postnumber">0 publicações</string>
     <string name="username">username</string>
     <string name="salvar">Salvar</string>
@@ -25,4 +30,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="reported">Esta frase foi denunciada, até que seja analisada, não será exibida no feed!</string>
+    <string name="sucess_update">Dados alterados com sucesso... Vamos te levar de volta para a tela inicial</string>
 </resources>
