Fixes and few implementations

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,35 @@
     <string name="reported">Esta frase foi denunciada, até que seja analisada, não será exibida no feed!</string>
     <string name="sucess_update">Dados alterados com sucesso... Vamos te levar de volta para a tela inicial</string>
     <string name="title_home">Home</string>
+    <string name="icon_info">user icon</string>
+    <string name="alterar_nome">Alterar nome</string>
+    <string name="apagar_posts">Apagar posts</string>
+    <string name="apagar_conta">Apagar conta</string>
+    <string name="remover_foto_de_perfil">Remover foto de perfil</string>
+    <string name="foto_atualizada">Foto atualizada</string>
+    <string name="vector">m118.19 6.81c-4.59 -4.59 -10.12 -6.88 -16.58 -6.88h-78.21c-6.46 0 -11.99 2.29 -16.58 6.88c-4.59 4.59 -6.88 10.12 -6.88 16.58v78.21c0 6.46 2.29 11.99 6.88 16.58c4.59 4.59 10.12 6.88 16.58 6.88h78.21c6.46 0 11.99 -2.3 16.58 -6.88c4.59 -4.59 6.88 -10.12 6.88 -16.58v-78.21c0 -6.46 -2.29 -11.99 -6.88 -16.58zm-80.13 97.89h-18.82v-56.54h18.82v56.54zm-1.71 -67.01c-1.95 1.87 -4.54 2.81 -7.74 2.81h-0.08c-3.1 0 -5.61 -0.94 -7.54 -2.81c-1.93 -1.87 -2.89 -4.2 -2.89 -6.97c0 -2.82 0.99 -5.16 2.97 -7.01c1.98 -1.85 4.55 -2.77 7.7 -2.77c3.15 0 5.68 0.92 7.58 2.77c1.9 1.85 2.88 4.18 2.93 7.01c0 2.77 -0.98 5.09 -2.93 6.97zm69.41 67.01h-18.82v-30.23c0 -8.53 -3.15 -12.79 -9.45 -12.79c-2.39 0 -4.4 0.67 -6.03 2c-1.63 1.33 -2.85 2.95 -3.67 4.85c-0.38 0.98 -0.57 2.5 -0.57 4.56v31.61h-18.82c0.16 -34.11 0.16 -52.96 0 -56.54h18.82v7.98c3.96 -6.19 9.58 -9.29 16.86 -9.29c6.52 0 11.76 2.15 15.73 6.44c3.96 4.29 5.95 10.62 5.95 18.98v32.43h-0z</string>
+    <string name="creator_pic">creator profile image</string>
+    <string name="creator">Creator</string>
+    <string name="linkedinbutton">linkedinbutton</string>
+    <string name="m_sica">Música</string>
+    <string name="cita_o">Citação</string>
+    <string name="motiva_o">Motivação</string>
+    <string name="amor">Amor</string>
+    <string name="_0">0</string>
+    <string name="_0">0</string>
+    <string name="reference">reference</string>
+    <string name="alterar">Alterar</string>
+    <string name="salvando">Salvando...</string>
+    <string name="clear">clear search field</string>
+    <string name="pesquisar">Pesquisar...</string>
+    <string name="vai_l_procura_o_que_quiser">Vai lá procura o que quiser</string>
+    <string name="empty_search">empty search</string>
+    <string name="criadores">Criadores</string>
+    <string name="refer_ncias">Referências</string>
+    <string name="artistas">Artistas</string>
+    <string name="suporte">Suporte</string>
+    <string name="suporrt_ad">Anúncio para ajudar o aplicativo</string>
+    <string name="firebase">Desenvolvido com a ferramenta Firebase</string>
+    <string name="motiv_desenvolvido_por_inlustris_em_2018_todos_os_direitos_reservados">Motiv desenvolvido por Inlustris em 2018, todos os direitos reservados</string>
+    <string name="atuazlizando">Atualizando...</string>
 </resources>
