--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
 
     <string name="developed_by">by Inlustris since 2018</string>
 
+    <string name="profilepictransiction">profilepic</string>
     <string name="icon_info">user icon</string>
     <string name="default_notification_channel_id">motivchannel</string>
     <string name="fcm_message">🌠 Motiv</string>
@@ -29,4 +30,7 @@
     <string name="fatal_error_title">Alguma coisa deu errado :(</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="query_hint">Pesquise citações, autores, músicas...</string>
+    <string name="card_transaction">quoteCard</string>
+    <string name="quote_transaction">quoteTransaction</string>
+    <string name="author_transaction">authorTransaction</string>
 </resources>
