--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,8 @@
     <string name="quote">Escreva uma frase</string>
     <string name="author">Escre o nome do autor</string>
     <string name="Welcome">Bem-vindo ao Motiv</string>
-    <string name="titleone">A sua rede social para os amantes da poesia,você é livre para expressar-se com suas palavras!</string>
-    <string name="developed_by">by Inlustris since 2018</string>
+    <string name="titleone">A sua rede social para os amantes da poesia, você é livre para expressar-se com suas palavras!</string>
+    <string name="developed_by">by\nIlustris since 2018</string>
     <string name="icon_info">user icon</string>
     <string name="default_notification_channel_id">motivchannel</string>
     <string name="fcm_message">🌠 Motiv</string>
