--- a/base/src/main/res/values/strings.xml
+++ b/base/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="user_pic_transaction">profilepic</string>
     <string name="follow_user">seguir</string>
     <string name="message_user">mensagem</string>
+    <string name="empty_text" />
 </resources>
