--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
 
     <string name="facebook_app_id">259084328108067</string>
     <string name="fb_login_protocol_scheme">fb259084328108067</string>
-    <string name="quote">Escreva uma frase</string>
-    <string name="author">Escre o nome do autor</string>
+    <string name="quote">O que está pensando?</string>
+    <string name="author">Autor</string>
     <string name="Welcome">Bem-vindo ao Motiv</string>
     <string name="titleone">A sua rede social para os amantes da poesia, você é livre para expressar-se com suas palavras!</string>
     <string name="developed_by">by\nIlustris since 2018</string>
