--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,7 +11,9 @@
     <string name="default_notification_channel_id">motivchannel</string>
     <string name="fcm_message">🌠 Motiv</string>
     <string name="dribble_description">Dribbble is where designers gain inspiration, feedback, community, and jobs and is your best resource to discover and connect with designers worldwide.</string>
-    <string name="support_devs">Apoiar desenvolvedores</string>
+    <string name="support_devs_label">Quer demonstrar seu apoio ao projeto?</string>
+    <string name="support_devs">Veja um anúncio em vídeo para nos apoiar 🚀</string>
+    <string name="follow_us">Siga-nos no</string>
 
     <string name="save_quote_button">Salvar Frase</string>
     <string name="fatal_error_message">Por favor nos perdoe, cometemos um erro fatal e já estamos trabalhando nisso, não vá reclamar da gente pros amigos.</string>
