edit and create quote feature reimplemented, using viewmodel, share quote available again.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,8 @@
     <string name="support_devs">Veja um anúncio em vídeo para nos apoiar 🚀</string>
     <string name="follow_us">Siga-nos no</string>
 
-    <string name="save_quote_button">Salvar Frase</string>
+    <string name="save_quote_button">Publicar</string>
+    <string name="cancel_button">Cancelar</string>
     <string name="fatal_error_message">Por favor nos perdoe, cometemos um erro fatal e já estamos trabalhando nisso, não vá reclamar da gente pros amigos.</string>
     <string name="fatal_error_title">Alguma coisa deu errado :(</string>
     <string name="query_hint">Pesquisar frases...</string>
