implementing newstyle flow

--- a/base/src/main/res/values/strings.xml
+++ b/base/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="empty_text" />
     <string name="default_notification_channel_id">motivchannel</string>
     <string name="fcm_message">🌠 Motiv</string>
+    <string name="cancel_button">Cancelar</string>
 </resources>
